<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GS SHOP</string>
    <string name="txt_ars_number">0809004545</string>
    <string name="txt_on_sale">구매중</string>
    <string name="menu_home">홈</string>
    <string name="menu_category">카테고리</string>
    <string name="menu_search">검색</string>
    <string name="menu_cart">스마트카트</string>
    <string name="menu_order">주문배송</string>
    <string name="menu_myshop">마이쇼핑</string>
    <string name="menu_zzim_prd">찜</string>
    <string name="menu_last_prd">최근본상품</string>
    <string name="network_disconnected">데이터 수신이 원활하지 않습니다.\n잠시 후 다시 시도해주시기 바랍니다.</string>
    <string name="network_unresponsive">앱 실행이 원활하지 않습니다.\n잠시 후 다시 시도해 주십시오.</string>
    <string name="network_unstable">네트워크 연결이 원활하지 않습니다.\n잠시 후 다시 실행해 주십시오.</string>
    <string name="network_billing_confirm">3G/LTE등으로 접속시\n데이터 통화료가 발생할 수 있습니다.</string>
    <string name="network_unstable_detail_Vew">서비스가 원활하지 않습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="update_title">업데이트 안내</string>
    <string name="update_confirm_nomal_message">현재 최신버전이 아닙니다.\n업데이트 하시겠습니까?</string>
    <string name="update_confirm_pos_message">업데이트된 GS SHOP앱을 다운받고\n기분 좋은 쇼핑을 경험하세요!</string>
    <string name="update_now">업데이트</string>
    <string name="update_later">나중에</string>
    <string name="login_intro_fail">로그인하지 못했습니다.</string>
    <string name="login_invalid_id">아이디를 입력해 주세요.</string>
    <string name="login_invalid_password">비밀번호를 입력해 주세요.</string>
    <string name="login_invalid_input">아이디 또는 비밀번호를 입력하세요.</string>
    <string name="login_title">로그인</string>
    <string name="login_hint_login_id">아이디</string>
    <string name="login_hint_password">비밀번호(영문+숫자 6~16자)</string>
    <string name="login_keep_login">자동로그인</string>
    <string name="login_hint_login_id_email">아이디 또는 이메일주소</string>
    <string name="login_adult_description">청소년 접근이 제한된 정보로 성인인증이 필요합니다.</string>
    <string name="login_phone_login">휴대폰 로그인</string>
    <string name="login_info">로그인이 필요한 서비스 입니다.</string>
    <string name="login_join">회원가입</string>
    <string name="login_confirm_logout">로그아웃 하시겠습니까?</string>
    <string name="login_confirm_logout_simple_cancel">로그아웃 하시겠습니까? \n해당 아이디는 간편로그인이 해제되며 로그인 시 재설정이 가능합니다.</string>
    <string name="login_confirm_logout_simple">로그아웃 하시겠습니까? 설정된 간편 로그인은 유지되며, 마이쇼핑 > 설정 > 로그인 관리 에서 해제하실수 있습니다.</string>
    <string name="login_nonmember_order_description_link">비회원 주문</string>
    <string name="login_nonmember_order_description1">시에는 GS SHOP에서 제공하는</string>
    <string name="login_nonmember_order_description2">다양한 혜택(가격 할인, 이벤트 사은품, 추가 적립 등)을\n받으실 수 없습니다.</string>
    <string name="login_error_msg">서버와의 연결이 원활하지 않습니다.\n잠시 후 다시 시도해주시기 바랍니다.</string>
    <string name="login_easy">간편 로그인 설정</string>
    <string name="sns_login_btn_login">로그인</string>
    <string name="sns_login_btn_password_find">비밀번호 찾기</string>
    <string name="sns_login_error">로그인 수행 중 오류가 발생했습니다.</string>
    <string name="sns_login_version_old">네이버/카카오 로그인 연동은 안드로이드 OS 5.0 버전 이상에서만 사용 가능합니다.</string>
    <string name="sns_kakaotalk_not_installed">카카오톡 앱을 설치한 후에 사용할 수 있습니다.</string>
    <string name="sns_kakaostory_not_installed">카카오스토리 앱을 설치한 후에 사용할 수 있습니다.</string>
    <string name="sns_line_not_installed">라인 앱을 설치한 후에 사용할 수 있습니다.</string>
    <string name="sns_twitter_not_installed">트위터 앱을 설치한 후에 사용할 수 있습니다.</string>
    <string name="sns_pinterest_not_installed">핀터레스트 앱을 설치한 후에 사용할 수 있습니다.</string>
    <string name="fp_need_login">GS SHOP 아이디와 비밀번호로 로그인해주세요. 고객님 휴대폰에 등록된 바이오정보(지문)에 접근하여 GS SHOP 아이디와 연결하겠습니다.</string>
    <string name="fp_if_agree">지문로그인을 사용하시겠어요?\n고객님 휴대폰에 등록된 바이오정보(지문)에\n접근하여, GS SHOP 아이디와 연결하겠습니다.</string>
    <string name="fp_agree">동의</string>
    <string name="fp_dont_see_more">다시안보기</string>
    <string name="fp_go_login">동의</string>
    <string name="fp_next_login">취소</string>
    <string name="fp_on_sensor">지문센서에 손가락을 올려주세요.</string>
    <string name="fp_locked">지문인증 잠김</string>
    <string name="fp_fail_count_over">실패횟수 초과로 지문인증이 잠겼습니다.\n30초 후 재시도 또는 휴대폰 설정에서\n비밀번호를 입력해 주세요.</string>
    <string name="login_tab_member">회원 로그인</string>
    <string name="login_tab_order">비회원 주문/배송조회</string>
    <string name="login_email_info_description1">이메일로 가입한 회원은 아이디 입력란에 이메일 주소를</string>
    <string name="login_email_info_description2">입력해 주세요.</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_email_cert_description1">해외거주 고객님! 회원가입 후에 로그인이 안되시면 메일 인증을 해주세요.  인증메일 받기</string>
    <string name="login_email_cert_description2">비회원 주문시에는 GS SHOP의 다양한 혜택을 받으실 수 없어요.</string>
    <string name="login_email_cert_description_link">인증메일 받기</string>
    <string name="login_easy_title">로그인 관리</string>
    <string name="login_easy_keep">간편 로그인 유지</string>
    <string name="login_easy_logout">로그아웃</string>
    <string name="login_easy_description1">간편로그인이란?</string>
    <string name="login_easy_description2">GS SHOP에서 제공하는 앱서비스간 별도 \n아이디/비밀번호 입력 없이 최초 인증된 계정정보로\n간편하게 로그인할 수  있는 기능입니다.</string>
    <string name="simple_login_alert">간편로그인은 GS SHOP에서 제공하는 앱서비스간 별도 아이디/비밀번호를 입력없이 최초 인증된 계정정보로 간편하게 로그인할 수  있는 기능입니다.</string>
    <string name="login_nonmember_adult_check_simple">성인인증</string>
    <string name="push_approve_title">GS SHOP 알림서비스 안내</string>
    <string name="push_approve">알림을 보내주세요</string>
    <string name="push_reject">다음에요</string>
    <string name="push_setting_title">알림(PUSH) 메시지</string>
    <string name="push_popup_setting_title">알림팝업 설정</string>
    <string name="push_popup">메시지 수신시 알림 팝업</string>
    <string name="push_screen_on">알림 팝업시 화면 켜짐</string>
    <string name="push_sound_setting_title">알림음 설정</string>
    <string name="push_sound">알림음</string>
    <string name="push_vibration">진동</string>
    <string name="msg_push_on_ad">광고성 PUSH(알림) 수신동의가 \n수신으로 변경되었습니다.\n</string>
    <string name="msg_push_off_ad">광고성 PUSH(알림) 수신동의가 \n미 수신으로 변경되었습니다.\n</string>
    <string name="msg_push_on">PUSH(알림) 수신동의가 \n수신으로 변경되었습니다.\n</string>
    <string name="msg_push_off">PUSH(알림) 수신동의가 \n미 수신으로 변경되었습니다.\n</string>
    <string name="msg_push_info">설정 -> 애플리케이션 -> GSSHOP APP -> 알림 표시 체크 설정에서도 변경 가능합니다. </string>
    <string name="push_dialog_two_button_txt_message">쇼핑 알림</string>
    <string name="auth_info_confirm">내용 확인했어요</string>
    <string name="search_qrcode_title">QR코드검색</string>
    <string name="search_qrcode_description">QR코드를 화면에 비추면 자동으로 인식합니다.</string>
    <string name="search_recent_keyword_delete">검색기록 전체삭제</string>
    <string name="search_recent_keyword_empty">최근 검색어가 없습니다.</string>
    <string name="search_related_keyword_empty">해당 검색어의 자동완성어가 없습니다.</string>
    <string name="search_recent_keyword_all_delete">"검색어를 모두 삭제하시겠습니까?"</string>
    <string name="search_description_search_main">검색어를 입력해주세요</string>
    <string name="search_description_search">검색</string>
    <string name="search_popular_title">인기 검색어</string>
    <string name="search_recent_title">최근 검색어</string>
    <string name="search_popular_update_tail">기준</string>
    <string name="search_bar_close">닫기</string>
    <string name="setting_title">설정</string>
    <string name="setting_login_status">아이디</string>
    <string name="setting_login_off">로그인 해주세요</string>
    <string name="setting_login">로그인</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_push">알림(PUSH) 받기</string>
    <string name="setting_push_ad">광고성 알림(PUSH) 받기</string>
    <string name="setting_push_sound">무음으로 알림</string>
    <string name="setting_video">동영상배너 자동플레이</string>
    <string name="setting_push_description">본 설정은 해당 기기에서만 유효하며, 수신 거절 시 모바일 상담 답변 등의 정보성 알림도 발송되지 않습니다.</string>
    <string name="setting_push_benefit_description">광고성 (PUSH) 메시지에 동의하시면, GS SHOP 할인권, 쿠폰, 상품권 등 푸짐한 혜택을 받으실 수 있습니다.</string>
    <string name="setting_version">버전정보</string>
    <string name="setting_provision">이용약관 및 개인정보 처리방침</string>
    <string name="setting_company">(주)GS리테일 회사소개</string>
    <string name="setting_member_leave">회원탈퇴</string>
    <string name="auto_login_unlink_message">자동 로그인을 해제하시겠어요?</string>
    <string name="auto_login_link_message">로그인 상태가 항상 유지됩니다.</string>
    <string name="naver_unlink_message">네이버 로그인을 해제하시겠어요?</string>
    <string name="naver_link_message">GS SHOP이 네이버를 사용하여 로그인합니다.</string>
    <string name="kakao_unlink_message">카카오 로그인을 해제하시겠어요?</string>
    <string name="kakao_link_message">GS SHOP이 카카오를 사용하여 로그인합니다.</string>
    <string name="fp_unlink_message">지문 로그인을 해제하시겠어요?</string>
    <string name="fp_link_message">휴대폰에 등록된 지문정보로 로그인이 됩니다.</string>
    <string name="fp_unregistered">바이오정보(지문) 등록이 가능한 휴대폰에서만 사용할 수 있습니다.</string>
    <string name="fp_unsetting">휴대폰 \'설정\' 메뉴에서 지문등록 및 기능활성화 후 사용할 수 있습니다</string>
    <string name="sns_login_link">로그인 연동 관리</string>
    <string name="version_setting_title">버전관리</string>
    <string name="version_current">현재버전</string>
    <string name="version_last">최신버전</string>
    <string name="version_update">최신버전 업데이트 v%1$s</string>
    <string name="version_uptodate">현재버전이 최신버전입니다.</string>
    <string name="version_update_setting">업데이트</string>
    <string name="review_title_write">상품평 작성</string>
    <string name="review_title_modify">상품평 수정</string>
    <string name="review_hint_contents_sec_normal">상품에 대한 후기를 남겨주세요.\n\n※ 작성시 주의사항\n다음 내용의 글은 관리자에 의해 임의 삭제될 수 있습니다.\n- 전화번호, 주민번호, 이름, 아이디 등 개인정보가 포함된 글\n- 저작권침해/음란/욕설/비방글\n- 판매/광고/홍보성 글을 등록한 경우</string>
    <string name="review_hint_contents_normal">솔직하고 유용한 상품평을 작성해주세요.\n\n다음과 같은 내용의 글은 관리자에 의해 임의로 삭제될 수 있으니 유의해주세요.\n- 타인의 저작권을 침해한 경우\n- 음란, 욕설 등 공공성을 저해하는 경우\n- 개인정보 유출의 위험이 있는 글\n- 판매/광고/홍보성 글을 등록한 경우</string>
    <string name="review_hint_contents_restricted">상품평 대신 의견을 들려주시겠습니까?\n\n이 상품은 식품/의료기기 관련 법규에 의거하여 상품평 작성이 불가합니다. 상품평 대신 고객님의 의견이나 바라시는 점을 적어 주세요. 작성하신 내용은 담당MD와 공급업체에 전달되어 더 좋은 상품을 만드는 데 활용됩니다.</string>
    <string name="review_description_contents">상품평을 작성해 주세요.</string>
    <string name="review_photo_upload">사진 올리기</string>
    <string name="review_design">디자인</string>
    <string name="review_quality">품질</string>
    <string name="review_shipping">배송</string>
    <string name="review_satisfaction">사용만족도</string>
    <string name="tv_play">생방송 보기</string>
    <string name="order_product">바로주문</string>
    <string name="error_server_title">데이터 연결이 원활하지 않습니다.</string>
    <string name="error_server_desc">잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="app_refresh_button">새로고침</string>
    <string name="go_web">웹으로 보기</string>
    <string name="layout_main_info_header_terms">이용약관</string>
    <string name="layout_main_info_header_private">개인정보 처리방침</string>
    <string name="layout_main_info_header_teen">청소년 보호정책</string>
    <string name="layout_main_info_header_push">앱알림 설정</string>
    <string name="layout_main_info_ceo">(주)지에스리테일 대표이사 허연수, 김호성</string>
    <string name="layout_main_info">서울특별시 강남구 논현로 508 (역삼동, GS타워)\n개인정보 보호책임자 : 이종혁 / 호스팅제공자 : (주)지에스리테일\n사업자등록번호 : 116&#8211;81&#8211;18745 / gsshop@gsretail.com\n통신판매업신고번호 : 제2014&#8211;서울강남&#8211;01544호\n<![CDATA[ⓒ]]> GS Retail Co.,Ltd.</string>
    <string name="layout_main_info_sub1">사업자 정보확인</string>
    <string name="layout_main_info_sub2">기업은행 채무지급 보증안내</string>
    <string name="layout_main_info_family">Family Site</string>
    <string name="common_ok">확인</string>
    <string name="common_close">닫기</string>
    <string name="common_cancel">취소</string>
    <string name="update_pass_title_text">비밀번호 변경 안내</string>
    <string name="update_pass_guide_guide1">고객님,\n최근 180일 동안 같은 비밀번호를\n사용하고 계십니다.</string>
    <string name="update_pass_guide_guide2">비밀번호를 변경하여\n개인정보를 안전하게 보호하시기 바랍니다.</string>
    <string name="update_pass_button_text">비밀번호 변경하기</string>
    <string name="update_pass_not_show">30일간 보지 않기</string>
    <string name="accessibility_push_img">쇼핑의 혜택을 놓치지 않도록 알림을 켤까요? 특가상품, 이벤트, 쿠폰정보를 알려드려요. 알림수신동의는 해당기기에서만 적용돼요. 마이쇼핑>설정에서 언제든지 변경가능해요.</string>
</resources>