<?xml version="1.0" encoding="utf-8"?>
<!-- 비밀번호 변경 팝업 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="300dp"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_sns_dialog"
	android:layout_gravity="center"
	android:orientation="vertical" >

	<!-- 타이틀 -->
	<TextView
		android:id="@+id/txt_update_title"
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:textColor="#111111"
		android:textSize="16sp"
		android:text="@string/update_pass_title_text" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#e5e5e5" />

	<!-- 가이드문구1 -->
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:textColor="#111111"
		android:textSize="15sp"
		android:text="@string/update_pass_guide_guide1"
		android:includeFontPadding="false" />

	<!-- 가이드문구2 -->
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:textColor="#111111"
		android:textSize="14sp"
		android:textStyle="bold"
		android:text="@string/update_pass_guide_guide2"
		android:includeFontPadding="false" />

	<!-- 비밀번호 변경하기 버튼 -->
	<Button
		android:id="@+id/btn_update_pass"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:paddingLeft="30dp"
		android:paddingRight="30dp"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:layout_gravity="center"
		android:background="@drawable/bg_login_button"
		android:text="@string/update_pass_button_text"
		android:textColor="#111111"
		android:textSize="16sp"
		android:typeface="sans" />

	<!-- 하단 버튼 영역 -->
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginTop="25dp"
		android:background="#e5e5e5" />

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="44dp">

		<!-- 10일간 보지않기 -->
		<Button
			android:id="@+id/btn_not_show"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:background="@drawable/bg_update_pass_round_bottom_left"
			android:textColor="#666666"
			android:textSize="16sp"
			android:text="@string/update_pass_not_show"/>

		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="#e5e5e5" />

		<!-- 닫기 -->
		<Button
			android:id="@+id/btn_close"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:background="@drawable/bg_update_pass_round_bottom_right"
			android:textColor="#666666"
			android:textSize="16sp"
			android:text="@string/common_close"/>

	</LinearLayout>

</LinearLayout>