<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_mobile_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/network_billing_confirm"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_mobile_data_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dual_live_cancel_button"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/common_cancel"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:typeface="sans" />

        <androidx.legacy.widget.Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_mobile_data_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dual_live_cancel_ok"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/common_ok"
            android:textColor="#111111"
            android:textSize="15dp"
            android:typeface="sans" />

    </LinearLayout>

</LinearLayout>
